--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 </head>
 <body>
-<!-- Перемикач теми -->
-<div class="theme-switcher" id="theme-switcher" onclick="toggleTheme()">🌞</div>
-
 <!-- Хедер з навігацією -->
 <header>
     <nav class="navbar">
+        <div class="theme-switcher" id="theme-switcher" onclick="toggleTheme()">🌞</div>
         <div class="logo">
+            <img class="uss-logo" src="img/logo.png" alt="uss-logo">
             <a href="#">USS TOOLS</a>
         </div>
         <ul class="navigation" id="nav-menu">
